src/test/deca/context/invalid/fields/field_shadow_illegal_custom.deca
// Description :
// redéclaration d'un champ existant dans une sous-classe
//
// Resultats :
//    Erreur contextuelle
//    Ligne 13 : Le champ a est déjà défini dans cette classe ou hérité

class ParentField2 {
    int a;
}

class M extends ParentField2 {
    float a; // doit échouer
}
